[metadata]
name = mmpdb
version = 3.0a1
description = A package to identify matched molecular pairs and use them to predict property changes
author = Andrew Dalke
author_email = dalke@dalkescientific.com
maintainer = Christian Kramer
maintainer_email = rdkit-discuss@lists.sourceforge.net

long_description = file: README.md
url = https://github.com/rdkit/mmpdb

license_file = LICENSE.txt
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Science/Research
        Operating System :: Unix
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Chemistry"

keywords = matched molecular pair, MMP, cheminformatics

[options]
zip_safe = False
include_package_data = True
packages =
    mmpdblib
    mmpdblib.playhouse

[options.package_data]
mmpdblib = schema.sql, create_index.sql, drop_index.sql, fragment_schema.sql

[options.entry_points]
console_scripts =
    mmpdb = mmpdblib.commandline:main

[bdist_wheel]
universal=1
